--- a/Today I Learn/2020 Dec/2020-12-10-TIL.md
+++ b/Today I Learn/2020 Dec/2020-12-10-TIL.md
@@ -8,9 +8,9 @@
     80%까지 올리니 정확하게 사물들을 맞추고 라벨링 하더라구요. 
 - 자기계발
 
-  2. 건강
-     - `유산소/무산소 30분`
-     - `11.9~12.31 목표 몸무게: 78.6kg
+  1. 건강
+     - `유산소/무산소 30분``
+     - ``11.9~12.31 목표 몸무게: 78.6kg
        시작 몸무게: 86.6kg
        현재 몸무게: 79.6kg`
 - 금융
